<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>gestionStock</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>

        <exec.mainClass>com.mycompany.gestionstock.GestionStock</exec.mainClass>
    </properties>
     <dependencies>
        <!-- Exemple pour MySQL -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>
          <dependency>
               <groupId>org.netbeans.external</groupId>
               <artifactId>AbsoluteLayout</artifactId>
               <version>RELEASE230</version>
          </dependency>
          <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.17.0</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
<dependency>
    <groupId>com.h2database</groupId>
    <artifactId>h2</artifactId>
    <version>2.1.214</version> <!-- Assurez-vous d'utiliser la version la plus récente -->
    <scope>test</scope>
</dependency>
          <dependency>
               <groupId>com.kloudtek.mule.elogging</groupId>
               <artifactId>mule-elogging-log4j2</artifactId>
               <version>0.9.3</version>
               <scope>test</scope>
               <type>jar</type>
          </dependency>
         <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>absolute-layout</artifactId>
            <version>RELEASE82</version>
</dependency>


     </dependencies>
     
     
     <build>
    <plugins>
        <plugin>
    <groupId>org.jacoco</groupId>
    <artifactId>jacoco-maven-plugin</artifactId>
    <version>0.8.11</version>
    <executions>
        <execution>
            <goals>
                <goal>prepare-agent</goal>
            </goals>
        </execution>
        <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
                <goal>report</goal>
            </goals>
        </execution>
    </executions>
    <configuration>
        <excludes>
            <exclude>sun/**</exclude>
            <exclude>com/sun/**</exclude>
            <exclude>jdk/**</exclude>
            <exclude>javax/**</exclude>
            <exclude>java/**</exclude>
        </excludes>
    </configuration>
</plugin>
      <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
              <compilerArgs>
                <arg>--enable-preview</arg>
              </compilerArgs>
            </configuration>
    </plugin>
    <plugin>
            
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-assembly-plugin</artifactId>
    <version>3.3.0</version>
    <configuration>
      <archive>
        <manifest>
          <mainClass>view.Main</mainClass>
        </manifest>
      </archive>
      <descriptorRefs>
        <descriptorRef>jar-with-dependencies</descriptorRef>
      </descriptorRefs>
    </configuration>
    <executions>
      <execution>
        <id>make-assembly</id>
        <phase>package</phase>
        <goals>
          <goal>single</goal>
        </goals>
      </execution>
    </executions>
  </plugin>

    </plugins>
</build>
     
    <name>App_gestionStock</name>
</project>